--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     compile 'me.relex:circleindicator:1.2.2@aar'
     implementation 'com.facebook.android:facebook-login:[4,5)'
     compile 'com.google.android.gms:play-services-auth:15.0.1'
+    compile 'com.miguelcatalan:materialsearchview:1.4.0'
 }
