해성 희수 민정 세린 레이아웃 구현 통합 완료 // 라이브러리만 미구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,10 +46,10 @@
         <activity android:name=".subscribe.activity.BestChannelActivity" />
         <activity android:name=".request.activity.RequestWriteActivity" />
         <activity android:name=".request.activity.RequestContentActivity"></activity>
-        <activity android:name=".contents.activity.videoContentsMain"/>
+        <activity android:name=".contents.activity.VideoContentsMainActivity"/>
         <activity android:name=".contents.activity.ImageContentsActivity" />
         <activity android:name=".ImageDetail" />
-        <activity android:name=".contents.activity.ImageContents"></activity>
+        <activity android:name=".contents.activity.ImageContentsActivity"></activity>
     </application>
 
 </manifest>
