--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation 'com.facebook.android:facebook-login:[4,5)'
     compile 'com.google.android.gms:play-services-auth:15.0.1'
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
+    compile 'com.sackcentury:shinebutton:0.2.0'
 
 }
 apply plugin: 'realm-android'
