--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,6 @@ dependencies {
     compile 'com.google.android.gms:play-services-auth:15.0.1'
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
     compile 'com.sackcentury:shinebutton:0.2.0'
-
+    compile 'com.sothree.slidinguppanel:library:3.4.0'
 }
 apply plugin: 'realm-android'
