--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,5 +46,6 @@ dependencies {
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
     compile 'com.sackcentury:shinebutton:0.2.0'
     compile 'com.sothree.slidinguppanel:library:3.4.0'
+    compile 'com.github.skydoves:powermenu:1.0.8'
 }
 apply plugin: 'realm-android'
