--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,6 @@ dependencies {
     compile 'com.sothree.slidinguppanel:library:3.4.0'
     compile 'com.github.skydoves:powermenu:1.0.8'
     implementation 'com.airbnb.android:lottie:2.5.5'
+    compile 'com.github.skydoves:colorpickerview:1.0.8'
 }
 apply plugin: 'realm-android'
