request 댓글 불러오기

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,14 +47,13 @@
         <activity android:name=".search.activity.SearchActivity" />
         <activity android:name=".subscribe.activity.BestChannelActivity" />
         <activity android:name=".request.activity.RequestWriteActivity" />
-        <activity android:name=".request.activity.RequestContentActivity" />
+        <activity android:name=".request.activity.RequestContentActivity"
+            android:windowSoftInputMode="adjustPan"/>
         <activity android:name=".library.activity.GroupDetailActivity"></activity>
         <activity android:name=".contents.activity.VideoContentsMainActivity"
             android:windowSoftInputMode="adjustPan"/>
         <activity android:name=".contents.activity.ImageContentsActivity"
             />
-        <!--<activity android:name=".contents.activity.VideoContentsCommentFragment"-->
-            <!--android:windowSoftInputMode="adjustResize"/>-->
 
     </application>
 
